--- a/cities/app/src/main/resources/application.yml
+++ b/cities/app/src/main/resources/application.yml
@@ -16,6 +16,12 @@ management:
     health:
       show-details: always
 
+eureka:
+  client:
+    enabled: false
+    registerWithEureka: false
+    fetchRegistry: false
+
 spring:
   data:
     mongodb:
